--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <h1 class="text">Our Features</h1>
         
       </div>
-      <marquee behavior="" direction="right"><p style="color:white;"><b>Click download button to get .exe file</b></p></marquee>
+      <marquee behavior="" direction="left"><p style="color:white;"><b>Click download button to get .exe file</b></p></marquee>
         
          <div id="section-2">
           <div class="card" style="width: 18rem; height: 15rem;">
