--- a/index.html
+++ b/index.html
@@ -60,6 +60,22 @@
                 <marquee behavior="" direction="right"><p style="color: white;"><b>Click on the below button to view our features</b></p></marquee>
                 <a class="btn btn-primary" href="#section-2" role="button">Our Features</a>              
               </div>
+                <div class="carousel-item">
+              <img src="bg2.jpg" class="d-block" alt="image-2">
+              <div class="carousel-caption d-md-block">
+                <h3>Human Computer Interaction using Gesture</h3>
+                <!-- <marquee behavior="" direction="right"><p style="color: white;"><b>Click on the below button to view our features</b></p></marquee> -->
+                <a class="btn btn-primary" href="#section-2" role="button">Our Features</a>              
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="bg4.jpg" class="d-block" alt="image-3">
+              <div class="carousel-caption d-md-block">
+                <h3>Human Computer Interaction using Gesture</h3>
+                <!-- <marquee behavior="" direction="right"><p style="color: white;"><b>Click on the below button to view our features</b></p></marquee> -->
+                <a class="btn btn-primary" href="#section-2" role="button">Our Features</a>              
+              </div>
+            </div>
             </div>
             
           </div>
