--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
             <div class="card" style="width: 18rem;">
               <img src="beas mam.jpg" class="card-img-top" alt="Beas Bhadra">
               <div class="card-body">
-                <h5 class="card-title"><b>Mrs. Beas Bhadra (Mentor)</b></h5>
+                <h5 class="card-title" style="font-size: 19px;"><b>Prof. Beas Bhadra (Mentor)</b></h5>
                 <p class="card-text">
                   <b>Head of Department</b><br>Computer Science & Engineering
                 </p>
