--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
       <div id="section-5">
        <footer class="page-footer font-small blue pt-4">
 
-    <div class="footer-copyright copyright text-center py-3" style="font-size: 18px;">© 2023 Human Conputer Interaction using Gesture.<br>All Rights Reserved.
+    <div class="footer-copyright copyright text-center py-3" style="font-size: 18px;">© 2023 Human Computer Interaction using Gesture.<br>All Rights Reserved.
       <p>Email :- pandeyaaditya2001@gmail.com</p>
   </div>
   <div class="backtop">
