--- a/details.html
+++ b/details.html
@@ -12,6 +12,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/details.css" />
     <title>Human Computer Interaction using Gesture</title>
     <link rel="icon" type="image/x-icon" href="./images/Logo.ico" />
   </head>
@@ -22,10 +23,7 @@
         <nav class="navbar navbar-expand-lg">
           <div class="container-fluid">
             <a class="navbar-brand" href="index.html"
-              ><img
-                src="./images/Logo.jpg"
-                alt="logo"
-                style="border-radius: 100px; height: 50px; width: 50px"
+              ><img src="./images/Logo.jpg" alt="logo"
             /></a>
             <button
               class="navbar-toggler"
@@ -81,25 +79,23 @@
           </div>
         </nav>
       </nav>
-
+      <div id="section-a">
+        <h1 class="text">PROJECT DETAILS</h1>
+      </div>
       <div id="details">
         <img src="images/Poster.png" alt="Details" />
       </div>
     </div>
 
-    <div id="section-5" style="margin-top:0; margin-bottom: 0;">
+    <div id="section-5" style="margin-top: 0; margin-bottom: 0">
       <footer class="page-footer font-small blue pt-4">
-        <div
-          class="footer-copyright copyright text-center py-3"
-          style="font-size: 18px"
-        >
-          © 2023 Human Conputer Interaction using Gesture.<br />All Rights
-          Reserved.
-          <p>Email :- pandeyaaditya2001@gmail.com</p>
+        <div class="footer-copyright copyright text-center py-3">
+          © 2023 Human Conputer Interaction using Gesture.
+          <br />All Rights Reserved. <br />Email :- pandeyaaditya2001@gmail.com
         </div>
         <div class="backtop">
           <a class="btn btn-outline-light" href="#main-navbar" role="button"
-            >Back to top</a
+            ><b>^</b></a
           >
         </div>
       </footer>
