--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
                   </div>
               </div>
   
-              <div class="carousel-item">
+<!--               <div class="carousel-item">
                 <img src="./images/bg4.jpg" class="d-block" alt="image-2">
-              </div>
+              </div> -->
   
               <!-- <div class="carousel-item">
                 <img src="./images/bg2.jpg" class="d-block" alt="image-3">
@@ -81,14 +81,14 @@
             </div>
             
   
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+<!--             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
               <span class="carousel-control-prev-icon" aria-hidden="true"></span>
               <span class="visually-hidden">Previous</span>
             </button>
             <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
               <span class="carousel-control-next-icon" aria-hidden="true"></span>
               <span class="visually-hidden">Next</span>
-            </button>
+            </button> -->
   
           </div>
         </div>
