--- a/index.html
+++ b/index.html
@@ -32,19 +32,19 @@
                     </li>
 
                     <li class="nav-item">
-                      <a class="nav-link" href="#section-4">Team members</a>
+                      <a class="nav-link" href="#section-4">Teammates</a>
                     </li>
 
                     <li class="nav-item">
-                      <a class="nav-link" href="details.html">Project Details</a>
+                      <a class="nav-link" href="details.html">Details</a>
                     </li>
                     
                     <li class="nav-item">
-                      <a class="nav-link" href="https://github.com/adityapandey1111/Human-Computer-Interaction-using-Gestures">Github Repository</a>
+                      <a class="nav-link" href="https://github.com/adityapandey1111/Human-Computer-Interaction-using-Gestures">Repository</a>
                     </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="#section-5">Contact Us</a>
-                    </li>
+<!--                     <li class="nav-item">
+                      <a class="nav-link" href="#section-5">Conta</a>
+                    </li> -->
                     
                   </ul>
                   <form class="d-flex" role="search">
